manifests/nextcloud/nextcloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nextcloud
    tier: webapp
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      tier: webapp

  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nextcloud
        tier: webapp

    spec:
      volumes:
        - name: nextcloud-vol
          persistentVolumeClaim:
            claimName: nextcloud-claim

      containers:
      - image: nextcloud:30.0.14-apache
        name: nextcloud
        volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-vol
