manifests/nextcloud/nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    tier: webapp
  name: nextcloud-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nextcloud
    tier: webapp
status:
  loadBalancer: {}
